Fix menu_button vertical alignment.

--- a/style.css
+++ b/style.css
@@ -894,6 +894,7 @@ a.hide_thread_button>span,
 .menu_button {
 	background-image:url(\"data:image/svg+xml," + $SS.theme.icons.menuButton + "\")!important;
     vertical-align:top!important;
+    padding-top:12px!important;
 " + ($SS.conf["Layout"] !== 2 && $SS.conf["Show/Hide Menu Entry"] ? "
 	right:2px;
 	opacity:0!important;
